--- a/docker-compose.prod.selfhost.yml
+++ b/docker-compose.prod.selfhost.yml
@@ -2,10 +2,10 @@ version: '3.3'
 services:
   nginx:
     volumes:
-      - /path/to/media:/webapp/media
+      - ./data/media:/webapp/media
   api:
     volumes:
-      - /path/to/media:/webapp/media
+      - ./data/media:/webapp/media
   huey:
     volumes:
-      - /path/to/media:/webapp/media
+      - ./data/media:/webapp/media
